chore: Update default dependencies chore: Update target Java to Java 17 chore: Update .gitignore chore: Remove unneeded project files leftover from template docs: Add README.md docs: Add screenshots feat: Add proper application icon feat: Add PrinterListActivity with add, modify, and remove functionality feat: Add PrinterDetailActivity with bottom bar navigation for switching between different printer interaction tabs feat: Add status tab for viewing printer status data received via MQTT subscription

--- a/.gitignore
+++ b/.gitignore
@@ -1,15 +1,23 @@
+# Android Studio project files
 *.iml
+.idea
+
+# Project caches
+.kotlin
 .gradle
-/local.properties
-/.idea/caches
-/.idea/libraries
-/.idea/modules.xml
-/.idea/workspace.xml
-/.idea/navEditor.xml
-/.idea/assetWizardSettings.xml
-.DS_Store
-/build
-/captures
+build
+captures
+
+# NDK caches
 .externalNativeBuild
 .cxx
+
+# Local project settings
+/local.properties
 local.properties
+
+# macOS Finder caches
+.DS_Store
+
+# Project references
+references
