--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
+    <uses-permission android:name="android.permission.INTERNET"/>
+
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
@@ -12,16 +14,18 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.OpenHand">
         <activity
-            android:name=".MainActivity"
+            android:name=".ui.activity.PrinterListActivity"
             android:exported="true"
-            android:label="@string/app_name"
             android:theme="@style/Theme.OpenHand">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:name=".ui.activity.PrinterDetailActivity"
+            android:exported="false"
+            android:theme="@style/Theme.OpenHand" />
     </application>
 
 </manifest>
