--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,7 +14,7 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.OpenHand">
         <activity
-            android:name=".ui.activity.PrinterListActivity"
+            android:name=".MainActivity"
             android:exported="true"
             android:theme="@style/Theme.OpenHand">
             <intent-filter>
@@ -22,10 +22,6 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity
-            android:name=".ui.activity.PrinterDetailActivity"
-            android:exported="false"
-            android:theme="@style/Theme.OpenHand" />
     </application>
 
 </manifest>
