chore: Change package name from com.virtualmememachine.openhand to com.jkuhldev.openhand

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,7 +14,7 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.OpenHand">
         <activity
-            android:name=".MainActivity"
+            android:name="com.jkuhldev.openhand.MainActivity"
             android:exported="true"
             android:theme="@style/Theme.OpenHand">
             <intent-filter>
